--- a/proytaller2/package.json
+++ b/proytaller2/package.json
@@ -12,6 +12,7 @@
     "@quasar/extras": "^1.17.0",
     "@quasar/vite-plugin": "^1.10.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "material-icons": "^1.13.14",
     "quasar": "^2.18.5",
     "vee-validate": "^4.15.1",
